list item alignment fixed

--- a/css/training.css
+++ b/css/training.css
@@ -29,15 +29,17 @@ body {
 .bg-overlay {
     width: 100%;
     height:100%;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.5);
 }
 
 .list-item-custom-1 {
     background-color: rgba(255,255,255,0.5);
-    vertical-align: middle;
 }
 
 .vertical-align {
-    display: flex;
+
+    display: inline-flex;
     align-items: center;
 }
+
+
